--- a/jwebppy/src/main/resources/templates/platform/layout/common/fragments/js.html
+++ b/jwebppy/src/main/resources/templates/platform/layout/common/fragments/js.html
@@ -1,4 +1,5 @@
 <script th:src="@{/platform/js/jquery/jquery.min.js}"></script>
+<script th:src="@{/platform/js/jquery/jquery.cookie.js}"></script>
 <script th:src="@{/platform/js/jquery/jquery.tablesort.min.js}"></script>
 <script th:src="@{/platform/js/semantic/semantic.min.js}"></script>
 <script th:src="@{/platform/js/semantic/calendar.min.js}"></script>
