--- a/jwebppy/src/main/resources/templates/platform/mgmt/user/credentials/policy/write.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/user/credentials/policy/write.html
@@ -187,7 +187,7 @@ $(document).ready(function() {
 		if ($("#FORM_write").form("validate form"))
 		{
 			JpUtilsAjax.post({
-				url: JpUtilsPath.url("/platform/mgmt/user/credentials/policy/save"),
+				url: "/platform/mgmt/user/credentials/policy/save",
 				data: $("#FORM_write").serialize(),
 				success: function(data, textStatus, jqXHR)
 				{
