--- a/jwebppy/src/main/resources/templates/platform/layout/common/fragments/bottom.html
+++ b/jwebppy/src/main/resources/templates/platform/layout/common/fragments/bottom.html
@@ -46,7 +46,7 @@ $(document).ready(function() {
 	$(".ui.bottom_blank").height($(".ui.bottom").height());
 });
 
-$(document).ajaxStart(function(event, jqXHR, ajaxOptions) {
+$(document).ajaxStart(function() {	
 	JpUiDimmer.showDimmer();
 });
 
