--- a/jwebppy/src/main/resources/templates/platform/mgmt/user/credentials/policy/list.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/user/credentials/policy/list.html
@@ -23,7 +23,8 @@
 			<div id="BTN_search" class="ui teal button"><i class="search icon"></i> Search</div>
 			<div class="ui button" onclick="document.location.reload()"><i class="undo icon"></i> Reset</div>
 		</div>
-	</div>		
+	</div>
+	</form>		
 	<div class="ui divider"></div>
 	<div class="ui one column grid">
 		<div class="column">
@@ -31,7 +32,6 @@
 			<div id="BTN_delete" class="ui teal button"><i class="minus icon"></i> Delete</div>
 		</div>
 	</div>
-	</form>	
 	<form id="FORM_write" class="ui form" autocomplete="off" onsubmit="return false;">
 	<div id="TBL_list"></div>
 	</form>
@@ -43,7 +43,7 @@ $(document).ready(function() {
 	listTable = new JpUiTable($("#TBL_list"));
 	listTable.settings = {
 			ajax: {
-				url: JpUtilsPath.url("/platform/mgmt/user/credentials/policy/list/data"),
+				url: "/platform/mgmt/user/credentials/policy/list/layout",
 				form: $("#FORM_search")
 			},
 			onClickPageNumber: function(pageNumber)
@@ -68,7 +68,7 @@ $(document).ready(function() {
 						data[name] = ($(this).is(":checked")) ? $(this).val() : "";
 
 						JpUtilsAjax.post({
-							url: JpUtilsPath.url("/platform/mgmt/user/credentials/policy/save/" + path),
+							url: "/platform/mgmt/user/credentials/policy/save/" + path,
 							data: data,
 							success: function(data, textStatus, jqXHR)
 							{
@@ -104,10 +104,10 @@ $(document).ready(function() {
 	});
 	
 	$("#BTN_delete").on("click", function() {
-		if (confirm("Do you want to delete them?"))
+		if (confirm("Do you want to delete?"))
 		{
 			JpUtilsAjax.post({
-				url: JpUtilsPath.url("/platform/mgmt/user/credentials/policy/delete"),
+				url: "/platform/mgmt/user/credentials/policy/delete",
 				data: $("#FORM_write").serialize(),
 				success: function(data, textStatus, jqXHR)
 				{
