--- a/jwebppy/src/main/resources/templates/platform/mgmt/user/list.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/user/list.html
@@ -21,42 +21,42 @@
 			</div>
 		</div>
 		<div class="four wide field">
-			<div id="BTN_searchUser" class="ui teal button"><i class="search icon"></i> Search</div>
+			<div id="BTN_search" class="ui teal button"><i class="search icon"></i> Search</div>
 			<div class="ui button" onclick="document.location.reload()"><i class="redo icon"></i> Reset</div>
 		</div>
 	</div>
 	<div class="ui divider"></div>
 	<div class="ui one column grid">
 		<div class="column">
-			<div id="BTN_createUser" class="ui teal button"><i class="plus icon"></i> Create</div>
-			<div id="BTN_copyToCreateUser" class="ui teal button"><i class="copy outline icon"></i> Copy To Create</div>
-			<div id="BTN_deleteUser" class="ui teal button"><i class="minus icon"></i> Delete</div>
-			<div id="BTN_lockUser" class="ui teal button"><i class="lock icon"></i> Lock</div>
-			<div id="BTN_unlockUser" class="ui teal button"><i class="lock open icon"></i> Unlock</div>
+			<div id="BTN_create" class="ui teal button"><i class="plus icon"></i> Create</div>
+			<div id="BTN_copyToCreate" class="ui teal button"><i class="copy outline icon"></i> Copy To Create</div>
+			<div id="BTN_delete" class="ui teal button"><i class="minus icon"></i> Delete</div>
+			<div id="BTN_lock" class="ui teal button"><i class="lock icon"></i> Lock</div>
+			<div id="BTN_unlock" class="ui teal button"><i class="lock open icon"></i> Unlock</div>
 		</div>
 	</div>
 	<div id="TBL_users"></div>
 	</form>
-	<div class="ui segment" id="AREA_viewUserDetail" style="display:none;">
+	<div class="ui segment" id="AREA_viewDetail" style="display:none;">
 		<div class="ui header"></div>
 		<div class="ui clearing divider"></div>
-		<div id="TAB_viewUserDetail" class="ui secondary pointing menu">
+		<div id="TAB_viewDetail" class="ui secondary pointing menu">
 			<a class="item wrap" data-tab="general">General</a>
 			<a class="item wrap" data-tab="account">Account</a>
 			<a class="item wrap" data-tab="contact">Contact Info.</a>
 			<a class="item wrap" data-tab="authority">Authority</a>
 			<a class="item wrap" data-tab="login_history">Login History</a>
 		</div>
-		<div class="AREA_moveToModifyUser" style="display:none;">
-			<div class="ui teal button BTN_modifyUser"><i class="edit outline icon"></i> Modify</div>
+		<div class="AREA_moveToModify" style="display:none;">
+			<div class="ui teal button BTN_modify"><i class="edit outline icon"></i> Modify</div>
 			<div class="ui clearing divider"></div>
 		</div>
-		<div class="AREA_modifyUser" style="display:none;">
-			<div class="ui teal button modify BTN_saveUser"><i class="check icon"></i> Save</div>
-			<div class="ui button modify BTN_cancelUser"><i class="times icon"></i> Cancel</div>
+		<div class="AREA_modify" style="display:none;">
+			<div class="ui teal button modify BTN_save"><i class="check icon"></i> Save</div>
+			<div class="ui button modify BTN_cancel"><i class="times icon"></i> Cancel</div>
 			<div class="ui clearing divider"></div>
 		</div>
-		<form id="FORM_modifyUser" class="ui form" autocomplete="off" onsubmit="return false;">
+		<form id="FORM_modify" class="ui form" autocomplete="off" onsubmit="return false;">
 			<input type="hidden" name="uSeq" />
 			<div class="ui tab attached segment teal" data-tab="general"></div>
 			<div class="ui tab attached segment teal" data-tab="account"></div>
@@ -64,14 +64,14 @@
 			<div class="ui tab attached segment teal" data-tab="authority"></div>
 			<div class="ui tab attached" data-tab="login_history"></div>
 		</form>
-		<div class="AREA_moveToModifyUser" style="display:none;">
+		<div class="AREA_moveToModify" style="display:none;">
 			<div class="ui clearing divider"></div>
-			<div class="ui teal button BTN_modifyUser"><i class="edit outline icon"></i> Modify</div>
+			<div class="ui teal button BTN_modify"><i class="edit outline icon"></i> Modify</div>
 		</div>
-		<div class="AREA_modifyUser" style="display:none;">
+		<div class="AREA_modify" style="display:none;">
 			<div class="ui clearing divider"></div>
-			<div class="ui teal button modify BTN_saveUser"><i class="check icon"></i> Save</div>
-			<div class="ui button modify BTN_cancelUser"> Cancel</div>
+			<div class="ui teal button modify BTN_save"><i class="check icon"></i> Save</div>
+			<div class="ui button modify BTN_cancel"> Cancel</div>
 		</div>
 	</div>
 	
@@ -106,8 +106,8 @@
 	    <div class="footer">
 			<div class="ui one column grid">
 			    <div class="column right aligned">
-			    	<div id="BTN_saveUserByCopy" class="ui teal button"><i class="check icon"></i> Save</div>
-			        <div id="BTN_cancelUserByCopy" class="ui normal button"><i class="times icon"></i> Cancel</div>
+			    	<div id="BTN_saveByCopy" class="ui teal button"><i class="check icon"></i> Save</div>
+			        <div id="BTN_cancelByCopy" class="ui normal button"><i class="times icon"></i> Cancel</div>
 			    </div>
 			</div>
 	    </div>
@@ -119,7 +119,7 @@ $(document).ready(function() {
 	let usersTable = new JpUiTable($("#TBL_users"));
 	usersTable.settings = {
 			ajax: {
-				url: JpUtilsPath.url("/platform/mgmt/user/list/data"),
+				url: "/platform/mgmt/user/list/layout",
 				form: $("#FORM_search"),
 				async: false,
 		  		beforeSend: function(jqXHR, settings)
@@ -139,11 +139,11 @@ $(document).ready(function() {
 			},
 			onClickDataKey: function(element, key, row)
 			{
-				viewUserTab.changePath(JpUtilsPath.url("/platform/mgmt/user/detail"));
+				viewUserTab.changePath("/platform/mgmt/user/view/layout");
 
 				if ($(row).hasClass("active"))
 				{
-					$("#AREA_viewUserDetail .ui.header").html("Details of User, " + $(element).html());
+					$("#AREA_viewDetail .ui.header").html("Details of User, " + $(element).html());
 
 					setSeq(key);
 					showUserDetailsArea();
@@ -185,8 +185,8 @@ $(document).ready(function() {
 		if (JpUtilsString.isNotEmpty(value))
 		{
 			JpUtilsAjax.get({
-				url: JpUtilsPath.url("/platform/mgmt/user/credentials/valid_check"),
-				data: { value: value, type: type, cpSeq: $("#FORM_modifyUser select[name=cpSeq]").val() },
+				url: "/platform/mgmt/user/credentials/valid_check",
+				data: { value: value, type: type, cpSeq: $("#FORM_modify select[name=cpSeq]").val() },
 				global: false,
 				async: false,
 				success: function(data, textStatus, jqXHR)
@@ -412,7 +412,7 @@ $(document).ready(function() {
 		keyboardShortcuts: false
 	};
 
-	let viewUserTab = new JpUiTab($("#TAB_viewUserDetail"));
+	let viewUserTab = new JpUiTab($("#TAB_viewDetail"));
 	viewUserTab.settings = {
 			ajax: {
 				beforeSend: function(settings)
@@ -431,13 +431,13 @@ $(document).ready(function() {
 				}
 			},
 			tab: {
-				path: JpUtilsPath.url("/platform/mgmt/user/detail"),
+				path: "/platform/mgmt/user/view/layout",
 				alwaysRefresh: true,
 				onLoaded: function(tabPath, parameterArray, historyEvent)
 				{
 					if (isOnForm())
 					{
-						$("#FORM_modifyUser").form(formValidCheck);
+						$("#FORM_modify").form(formValidCheck);
 
 						if (tabPath == "account")
 						{
@@ -446,7 +446,7 @@ $(document).ready(function() {
 							$("input:password[name=password], input:password[name=confirmPassword]").on("keydown", function(event) {
 								if (event.keyCode == 13)
 								{
-									doSaveUser();	
+									doSave();	
 								};
 							});
 						}
@@ -456,7 +456,7 @@ $(document).ready(function() {
 								onChange: function(value, text, $choice)
 								{
 									JpUtilsAjax.get({
-										url: JpUtilsPath.url("/platform/mgmt/user/timezone"),
+										url: "/platform/mgmt/user/timezone",
 										data: {"country": value},
 										global: false,
 										success: function(data, textStatus, jqXHR)
@@ -484,7 +484,7 @@ $(document).ready(function() {
 							$(".ui.tab[data-tab=authority]").html(html.join(""));
 
 							JpUtilsAjax.get({
-								url: JpUtilsPath.url("/platform/mgmt/content/list/data"),
+								url: "/platform/mgmt/content/list/data",
 								data: {"types" : ["R", "G"]},
 								global: false,
 								traditional: true,
@@ -522,9 +522,9 @@ $(document).ready(function() {
 							let myAuthorityTable = new JpUiTable($("#TBL_myAuthorityList"));
 							myAuthorityTable.settings = {
 									ajax: {
-										url: JpUtilsPath.url("/platform/mgmt/user/my_authority"),
+										url: "/platform/mgmt/user/my_authority",
 										global: false,
-										form: $("#FORM_modifyUser")
+										form: $("#FORM_modify")
 									}
 							};
 							myAuthorityTable.render();
@@ -561,18 +561,18 @@ $(document).ready(function() {
 					}
 
 					changeButtonStatus();
-					viewUserTab.changePath(JpUtilsPath.url("/platform/mgmt/user/detail"));
+					viewUserTab.changePath("/platform/mgmt/user/view/layout");
 				}
 			}
 	};
 
 	viewUserTab.render();
 
-	$("#BTN_createUser").on("click", function() {
+	$("#BTN_create").on("click", function() {
 		showCreateUserArea();
 	});
 
-	$("#BTN_copyToCreateUser").on("click", function() {
+	$("#BTN_copyToCreate").on("click", function() {
 
 		let checkedCount = getCheckedUserCount();
 
@@ -642,13 +642,13 @@ $(document).ready(function() {
 		}
 	});
 
-	$("#BTN_saveUserByCopy").on("click", function() {
+	$("#BTN_saveByCopy").on("click", function() {
 		if ($("#FORM_copyToCreate").form("validate form"))
 		{
 			$("#FORM_copyToCreate input[name=uSeq]").val(usersTable.getCheckedValues().join(""));
 
 			JpUtilsAjax.post({
-				url: JpUtilsPath.url("/platform/mgmt/user/copy"),
+				url: "/platform/mgmt/user/copy",
 				data: $("#FORM_copyToCreate").serialize(),
 				success: function(data, textStatus, jqXHR)
 				{
@@ -675,17 +675,17 @@ $(document).ready(function() {
 		};
 	});
 
-	$("#BTN_cancelUserByCopy").on("click", function() {
+	$("#BTN_cancelByCopy").on("click", function() {
 		$("#MDL_coptyToCreate").modal("hide");
 	});
 
-	$(".BTN_modifyUser").on("click", function() {
-		viewUserTab.changePath(JpUtilsPath.url("/platform/mgmt/user/write"));
+	$(".BTN_modify").on("click", function() {
+		viewUserTab.changePath("/platform/mgmt/user/write/layout");
 
 		changeTab();
 	});
 
-	$("#BTN_lockUser").on("click", function() {
+	$("#BTN_lock").on("click", function() {
 		if (getCheckedUserCount() == 0)
 		{
 			alert("Please choose the users to lock.");
@@ -695,7 +695,7 @@ $(document).ready(function() {
 		if (confirm("Do you want to lock the users?"))
 		{
 			JpUtilsAjax.post({
-				url: JpUtilsPath.url("/platform/mgmt/user/lock"),
+				url: "/platform/mgmt/user/lock",
 				data: $("#FORM_search").serialize(),
 				success: function(data, textStatus, jqXHR)
 				{
@@ -705,7 +705,7 @@ $(document).ready(function() {
 		};
 	});
 
-	$("#BTN_unlockUser").on("click", function() {
+	$("#BTN_unlock").on("click", function() {
 		if (getCheckedUserCount() == 0)
 		{
 			alert("Please choose the users to unlock.");
@@ -715,7 +715,7 @@ $(document).ready(function() {
 		if (confirm("Do you want to unlock the users?"))
 		{
 			JpUtilsAjax.post({
-				url: JpUtilsPath.url("/platform/mgmt/user/unlock"),
+				url: "/platform/mgmt/user/unlock",
 				data: $("#FORM_search").serialize(),
 				success: function(data, textStatus, jqXHR)
 				{
@@ -725,7 +725,7 @@ $(document).ready(function() {
 		};
 	});
 
-	$("#BTN_deleteUser").on("click", function() {
+	$("#BTN_delete").on("click", function() {
 		if (getCheckedUserCount() == 0)
 		{
 			alert("Please choose the users to delete.");
@@ -735,7 +735,7 @@ $(document).ready(function() {
 		if (confirm("Do you want to delete the users?"))
 		{
 			JpUtilsAjax.post({
-				url: JpUtilsPath.url("/platform/mgmt/user/delete"),
+				url: "/platform/mgmt/user/delete",
 				data: $("#FORM_search").serialize(),
 				success: function(data, textStatus, jqXHR)
 				{
@@ -747,17 +747,17 @@ $(document).ready(function() {
 
 	function setSeq(seq)
 	{
-		$("#FORM_search input:checkbox[name=uSeq]:first, #FORM_modifyUser input[name=uSeq]").val(seq);
+		$("#FORM_search input:checkbox[name=uSeq]:first, #FORM_modify input[name=uSeq]").val(seq);
 	};
 
 	function getSeq()
 	{
-		return JpUtilsString.trimToEmpty($("#FORM_modifyUser input[name=uSeq]").val());
+		return JpUtilsString.trimToEmpty($("#FORM_modify input[name=uSeq]").val());
 	};
 
 	function initSeq()
 	{
-		$("#FORM_search input:checkbox[name=uSeq]:first, #FORM_modifyUser input[name=uSeq]").val("");
+		$("#FORM_search input:checkbox[name=uSeq]:first, #FORM_modify input[name=uSeq]").val("");
 	};
 
 	function getCheckedUserCount()
@@ -775,26 +775,26 @@ $(document).ready(function() {
 
 	function hideUserDetailsArea()
 	{
-		$("#AREA_viewUserDetail").hide();
+		$("#AREA_viewDetail").hide();
 	};
 
 	function showUserDetailsArea()
 	{
 		changeTab("general");
 
-		$("#AREA_viewUserDetail").show();
+		$("#AREA_viewDetail").show();
 	};
 
 	function showCreateUserArea()
 	{
-		$("#AREA_viewUserDetail .ui.header").html("Create User");
+		$("#AREA_viewDetail .ui.header").html("Create User");
 
 		initSeq();
 
-		viewUserTab.changePath(JpUtilsPath.url("/platform/mgmt/user/write"));
+		viewUserTab.changePath("/platform/mgmt/user/write/layout");
 		changeTab("general");
 
-		$("#AREA_viewUserDetail").show();
+		$("#AREA_viewDetail").show();
 	};
 
 	$("#query").on("keydown", function(event) {
@@ -806,25 +806,25 @@ $(document).ready(function() {
 		this.select();
 	});
 
-	$("#BTN_searchUser").on("click", function() {		
+	$("#BTN_search").on("click", function() {		
 		setSeq("");
 		doSearch();
 	});
 
-	$(".BTN_saveUser").on("click", doSaveUser);
+	$(".BTN_save").on("click", doSave);
 	
-	function doSaveUser()
+	function doSave()
 	{
-		if ($("#FORM_modifyUser").form("validate form"))
+		if ($("#FORM_modify").form("validate form"))
 		{
 			if (viewUserTab.tabPath == "authority")
 			{
 				$("#TBL_myAuthorityList").find(".ui.checkbox").checkbox("check");
 			};
-
+			
 			JpUtilsAjax.post({
-				url: JpUtilsPath.url("/platform/mgmt/user/save/" + viewUserTab.tabPath),
-				data: $("#FORM_modifyUser").serialize(),
+				url: "/platform/mgmt/user/save/" + viewUserTab.tabPath,
+				data: $("#FORM_modify").serialize(),
 				success: function(data, textStatus, jqXHR)
 				{
 					if (JpUtilsString.isEmpty(getSeq()))
@@ -846,7 +846,7 @@ $(document).ready(function() {
 		}
 	};
 
-	$(".BTN_cancelUser").on("click", function() {
+	$(".BTN_cancel").on("click", function() {
 		if (JpUtilsString.isEmpty(getSeq()))
 		{
 			hideUserDetailsArea();
@@ -859,17 +859,17 @@ $(document).ready(function() {
 
 	function changeButtonStatus()
 	{
-		$(".AREA_moveToModifyUser, .AREA_modifyUser").css("display", "none");
+		$(".AREA_moveToModify, .AREA_modify").css("display", "none");
 
 		if (isOnForm())
 		{
-			$(".AREA_modifyUser").css("display", "block");
+			$(".AREA_modify").css("display", "block");
 		}
 		else
 		{
 			if (viewUserTab.tabPath != "login_history")
 			{
-				$(".AREA_moveToModifyUser").css("display", "block");
+				$(".AREA_moveToModify").css("display", "block");
 			}
 		};
 	};
@@ -883,7 +883,7 @@ $(document).ready(function() {
 
 	function isCreating()
 	{
-		if (isOnForm() && JpUtilsString.isEmpty($("#FORM_modifyUser input[name=username]").val()))
+		if (isOnForm() && JpUtilsString.isEmpty($("#FORM_modify input[name=username]").val()))
 		{
 			return true;
 		}
